bugfix/character-detail & bugfix/comic-detail — On chrome android, when hiding content to reveal cover, content is not hidden enough because the height of element .scroll is the visible height whereas on other platform it is the scroll height.

--- a/app/common/layout/_layout.scss
+++ b/app/common/layout/_layout.scss
@@ -9,6 +9,3 @@ ion-content > .scroll {
 .no-animation ion-content > .scroll {
     transition: none;
 }
-ion-content.hide-content > .scroll {
-    transform: translate3d(0, -101%, 0) !important;
-}
